<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/OrangeC"
    tools:context=".LogIn">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/GoBackButon"
            android:layout_width="121dp"
            android:layout_height="48dp"
            android:text="@string/GoBackTit" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LogInTit"
            android:textColor="#292929"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/common_full_open_on_phone" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LogEmailChawera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EmailTit" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/RegChawera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PasswordTit" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ConfirmButon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ConfirmTit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

